Remove uneeded `Monitor` instances from code
Inside some component callback classes there are monitors protecting code whose only entry path is through callbacks
dispatched by a reactor, which already provides the needed thread isolation.